rgbds-0.6.1/test/asm/nested-expansions.err
error: nested-expansions.asm(6) -> nested-expansions.asm::test(4):
    Macro "qux" not defined
error: Assembly aborted (1 error)!
